# Parcellation

./: .gitignore  .gitmodules  IO.py  Makefile  README.md  atlas_AR_ANT_RIGHT.bundles  atlas_AR_ANT_RIGHT.bundlesdata  atlas_AR_LEFT.bundles  atlas_AR_POST_LEFT.bundlesdata  atlas_AR_POST_RIGHT.bundles  atlas_CG2_LEFT.bundles  atlas_CG2_RIGHT.bundlesdata  atlas_CG_LEFT.bundles  atlas_IFO_LEFT.bundlesdata  atlas_IFO_RIGHT.bundles  atlas_IFO_RIGHT.bundlesdata  atlas_IL_RIGHT.bundles  atlas_lh_CAC-PrCu_0.bundles  atlas_lh_CMF-PoC_0.bundlesdata  atlas_lh_CMF-PrC_0.bundlesdata  atlas_lh_CMF-PrC_1.bundlesdata  atlas_lh_CMF-SF_0.bundles  atlas_lh_Fu-LO_0.bundles  atlas_lh_Fu_Fu_0i.bundles  atlas_lh_Fu_Fu_1l.bundlesdata  atlas_lh_Fu_IT_0i.bundles  atlas_lh_Fu_IT_0i.bundlesdata  atlas_lh_IP-IT_0.bundlesdata  atlas_lh_IP-LO_1.bundles  atlas_lh_IP-LO_1.bundlesdata  atlas_lh_IP-MT_0.bundles  atlas_lh_IP-MT_0.bundlesdata  atlas_lh_IP-SP_0.bundles  atlas_lh_IP-SP_0.bundlesdata  atlas_lh_IT_IT_0l.bundles  atlas_lh_IT_IT_0l.bundlesdata  build.py  bundleTools.py  main.cpp  parcelation.py  (+3 more)
INSTALLATION_BrainVisa_2020/: bv_maker.cfg  components_sources.json
bindings/: entry.cpp  entry.h
fused bundle-atlas/: atlas_AR_ANT_LEFT.bundlesdata  atlas_AR_LEFT.bundlesdata  atlas_AR_POST_RIGHT.bundlesdata  atlas_AR_RIGHT.bundlesdata  atlas_CG2_LEFT.bundlesdata  atlas_CG3_LEFT.bundles  atlas_CG3_LEFT.bundlesdata  atlas_CG3_RIGHT.bundlesdata  atlas_CG_LEFT.bundlesdata  atlas_CG_RIGHT.bundlesdata  atlas_IL_LEFT.bundlesdata  atlas_IL_RIGHT.bundlesdata  atlas_UN_LEFT.bundles  atlas_UN_LEFT.bundlesdata  atlas_UN_RIGHT.bundlesdata  atlas_lh_CAC-PrCu_0.bundlesdata  atlas_lh_CMF-Op_0.bundles  (+247 more)
src/: io.cpp  (+21 more)
(+279 files in other folders)
