[tool.poetry]
name = "intersection"
version = "0.1.0"
description = ""
authors = ["Peter Van Dyken <pvandyk2@uwo.ca>"]

[tool.poetry.dependencies]
python = "^3.10"
Cython = "^0.29.28"
nibabel = "^3.2.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
