[tool.poetry]
name = "intersection"
version = "0.1.0"
description = ""
authors = ["Peter Van Dyken <pvandyk2@uwo.ca>"]
build = 'build.py'

[tool.poetry.dependencies]
python = "^3.9"
Cython = "^0.29.28"
nibabel = "^3.2.2"
typer = "^0.4.0"
attrs = "^21.4.0"
fury = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
intersection = "intersection.main:app"