[tool.poetry]
name = "intersection"
version = "0.1.0"
description = ""
authors = ["Peter Van Dyken <pvandyk2@uwo.ca>"]
build = 'build.py'

[tool.poetry.dependencies]
python = "^3.9"
Cython = "^0.29.28"
nibabel = "^3.2.1"
typer = "^0.3.0"
attrs = "^21.4.0"
fury = "^0.8.0"
more-itertools = "^8.12.0"
networkx = "^2.7.0"
dipy = "^1.4.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
pybind11 = "^2.9.1"
cmake-build-extension = "^0.5.0"
ninja = "^1.10.2"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "cmake_build_extension",
    "numpy",
    "pybind11"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
intersection = "intersection.main:app"
